<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/ic_app_logo" />


        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#969EEE"
            android:textStyle="bold"
            android:typeface="monospace"
            app:fontFamily="casual" />


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_title"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="18dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">


            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_round_gray_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />


            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/don_t_have_an_account_nsign_up_here"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</layout>